Almost finish SM impl, smoothing group impl, work on SK impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,13 @@ project(FBX_Wrapper)
 set(CMAKE_CXX_STANDARD 17)
 set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/vs2019/x64/release")
 
-add_library(FBX_Wrapper SHARED library.cpp SMStructs.h FbxDataConverter.h UEStructs.h)
+add_library(FBX_Wrapper SHARED
+        library.cpp
+        SMStructs.h
+        FbxDataConverter.h
+        UEStructs.h
+        GenerateSmoothingGroups.cpp
+        GenerateSmoothingGroups.h SKStructs.h)
 add_library(libfbxsdk SHARED IMPORTED)
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_LOCATION "${LIB_DIR}/libfbxsdk.lib")
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_IMPLIB "${LIB_DIR}/libfbxsdk.dll")
