Switch to pass through data as Json string

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,10 @@ add_library(FBX_Wrapper SHARED
         FbxDataConverter.h
         UEStructs.h
         GenerateSmoothingGroups.cpp
-        GenerateSmoothingGroups.h SKStructs.h SKMStructs.h AnimSequenceStructs.h)
+        GenerateSmoothingGroups.h
+        SKStructs.h
+        SKMStructs.h
+        AnimSequenceStructs.h JsonDeserializer.cpp JsonDeserializer.h)
 add_library(libfbxsdk SHARED IMPORTED)
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_LOCATION "${LIB_DIR}/libfbxsdk.lib")
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_IMPLIB "${LIB_DIR}/libfbxsdk.dll")
