--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ lib/vs2019/x64/release/*
 # Ignore all in cmake-build-debug except FBX_Wrapper.dll
 cmake-build-debug/*
 !cmake-build-debug/FBX_Wrapper.dll
+cmake-build-release/*
+!cmake-build-release/FBX_Wrapper.dll
