--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,9 @@ set(LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/vs2019/x64/release")
 
 add_library(FBX_Wrapper SHARED
         library.cpp
-        SMStructs.h
-        FbxDataConverter.h
-        UEStructs.h
         GenerateSmoothingGroups.cpp
-        GenerateSmoothingGroups.h
-        SKStructs.h
-        SKMStructs.h
-        AnimSequenceStructs.h
         JsonDeserializer.cpp
-        JsonDeserializer.h)
+        FbxDataConverter.cpp)
 add_library(libfbxsdk SHARED IMPORTED)
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_LOCATION "${LIB_DIR}/libfbxsdk.lib")
 set_target_properties(libfbxsdk PROPERTIES IMPORTED_IMPLIB "${LIB_DIR}/libfbxsdk.dll")
@@ -27,3 +20,12 @@ link_directories(${LIB_DIR}/libfbxsdk.lib)
 target_link_libraries(FBX_Wrapper PRIVATE "${LIB_DIR}/libfbxsdk.lib")
 
 add_compile_definitions(FBXLIBRARY_EXPORTS)
+
+add_executable(FBX_Wrapper_Test
+        Test.cpp
+        library.cpp
+        GenerateSmoothingGroups.cpp
+        JsonDeserializer.cpp
+        FbxDataConverter.cpp)
+
+target_link_libraries(FBX_Wrapper_Test PRIVATE "${LIB_DIR}/libfbxsdk.lib")
