--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,6 @@ CMakeCache.txt
 
 FBX_Wrapper.sln
 
-FBX_Wrapper.dir/Release/FBX_Wrapper.Build.CppClean.log
+FBX_Wrapper.dir
 
-FBX_Wrapper.dir/Release/FBX_Wrapper.dll.recipe
-
-FBX_Wrapper.dir/Release/FBX_Wrapper.log
+*.exp
