Add VS project and solution for FBX wrapper, add release DLL, update ign

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,24 @@ cmake-build-debug/*
 cmake-build-release/*
 !cmake-build-release/FBX_Wrapper.dll
 !cmake-build-release/FBX_Wrapper.lib
+cmake_install.cmake
+
+CMakeFiles/
+
+x64/
+
+Debug/
+
+.vs/
+
+FBX_Wrapper.dir/
+
+CMakeCache.txt
+
+Release/FBX_Wrapper.exp
+
+Release/FBX_Wrapper.lib
+
+FBX_Wrapper_Test.vcxproj
+
+FBX_Wrapper_Test.vcxproj.filters
